Converted to JDK8 (from JDK11)