@@ -203,7 +203,7 @@ public final class ImmutableList<T> implements Iterable<T> {
     }
 
     private @Nonnull List<T> asList() {
-        return List.copyOf(this.arrayList.subList(first, last + 1));
+        return Collections.unmodifiableList(this.arrayList.subList(first, last + 1));
     }
 
     @Override
